--- a/Dash_Callbacks.ipynb
+++ b/Dash_Callbacks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMRjquVv/QLw2oc7b7E+oEr",
+      "authorship_tag": "ABX9TyMV3wDULN8QaDoMlll0VvOs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,7 +94,6 @@
         "    ]),\n",
         "    html.Br(),\n",
         "    html.Div(id='my-output'),\n",
-        "\n",
         "])"
       ],
       "metadata": {
@@ -174,6 +173,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Assignment 1**<br>\n",
+        "Add another callback to the page.<br>\n",
+        "Pay attention to the HTML syntax, \n"
+      ],
+      "metadata": {
+        "id": "PTfogYSBXCZr"
+      }
     },
     {
       "cell_type": "markdown",
@@ -303,6 +313,20 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Assignment 2**<br>\n",
+        "Modify the app<br>\n",
+        "Look at the dataset (https://plotly.github.io/datasets/country_indicators.csv) and modify the app. \n",
+        "<br>Or<br>\n",
+        "You can go to the datasets page https://plotly.github.io/datasets/\n",
+        "and find another data set to display"
+      ],
+      "metadata": {
+        "id": "bFcXO337X3ct"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# App with Multiple Outputs"
       ],
       "metadata": {
@@ -371,6 +395,19 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Assignment 3**<br>\n",
+        "Modify the app:<br>\n",
+        "1. Add more outputs\n",
+        "2. Change the input method\n",
+        "3. Add another input with multiple outputs"
+      ],
+      "metadata": {
+        "id": "J2x7VfQBbsv4"
+      }
     },
     {
       "cell_type": "markdown",
