--- a/Useful_Dash_Plotly_Examples.ipynb
+++ b/Useful_Dash_Plotly_Examples.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMsxXJfFzv3NzoR2JXympO/",
+      "authorship_tag": "ABX9TyMNA/9NBX3aJGpGw+XYa6c+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -363,6 +363,36 @@
       "metadata": {
         "id": "RWlr4vLkEKXE"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from dash import Dash, dcc, html, Input, Output\n",
+        "\n",
+        "app = Dash(__name__)\n",
+        "app.layout = html.Div([\n",
+        "    html.Button(\"Download Text\", id=\"btn-download-txt\"),\n",
+        "    dcc.Download(id=\"download-text\")\n",
+        "])\n",
+        "\n",
+        "\n",
+        "@app.callback(\n",
+        "    Output(\"download-text\", \"data\"),\n",
+        "    Input(\"btn-download-txt\", \"n_clicks\"),\n",
+        "    prevent_initial_call=True,\n",
+        ")\n",
+        "def func(n_clicks):\n",
+        "    return dict(content=\"Hello world!\", filename=\"hello.txt\")\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    app.run_server(debug=True)"
+      ],
+      "metadata": {
+        "id": "4COjPFKMytMV"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
