--- a/Useful_Dash_Plotly_Examples.ipynb
+++ b/Useful_Dash_Plotly_Examples.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMNA/9NBX3aJGpGw+XYa6c+",
+      "authorship_tag": "ABX9TyOZhAjoY+hq9y83H/aZCkxB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -365,16 +365,24 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Download text to a .txt file**"
+      ],
+      "metadata": {
+        "id": "BKPW_VeR0mzd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from dash import Dash, dcc, html, Input, Output\n",
         "\n",
-        "app = Dash(__name__)\n",
+        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
         "app.layout = html.Div([\n",
         "    html.Button(\"Download Text\", id=\"btn-download-txt\"),\n",
         "    dcc.Download(id=\"download-text\")\n",
         "])\n",
-        "\n",
         "\n",
         "@app.callback(\n",
         "    Output(\"download-text\", \"data\"),\n",
@@ -384,12 +392,55 @@
         "def func(n_clicks):\n",
         "    return dict(content=\"Hello world!\", filename=\"hello.txt\")\n",
         "\n",
-        "\n",
         "if __name__ == \"__main__\":\n",
-        "    app.run_server(debug=True)"
+        "    app.run_server()"
       ],
       "metadata": {
         "id": "4COjPFKMytMV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Download a dataframe to an Excel file"
+      ],
+      "metadata": {
+        "id": "VGvdeiM40rgQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from dash import Dash, dcc, html, Input, Output\n",
+        "import pandas as pd\n",
+        "\n",
+        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "app.layout = html.Div(\n",
+        "    [\n",
+        "        html.Button(\"Download CSV\", id=\"btn_csv\"),\n",
+        "        dcc.Download(id=\"download-dataframe-csv\"),\n",
+        "    ]\n",
+        ")\n",
+        "\n",
+        "df = pd.DataFrame({\"a\": [1, 2, 3, 4], \"b\": [2, 1, 5, 6], \"c\": [\"x\", \"x\", \"y\", \"y\"]})\n",
+        "\n",
+        "\n",
+        "@app.callback(\n",
+        "    Output(\"download-dataframe-csv\", \"data\"),\n",
+        "    Input(\"btn_csv\", \"n_clicks\"),\n",
+        "    prevent_initial_call=True,\n",
+        ")\n",
+        "def func(n_clicks):\n",
+        "    return dcc.send_data_frame(df.to_csv, \"mydf.csv\")\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    app.run_server(debug=True)\n"
+      ],
+      "metadata": {
+        "id": "SkIvk8tQz34E"
       },
       "execution_count": null,
       "outputs": []
