--- a/Dash_1.ipynb
+++ b/Dash_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMeg+NeRIyNLenSZPTOjXRo",
+      "authorship_tag": "ABX9TyOHQBkG0AXd51AWXWr9ygfm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "\n",
         "In the \"Plotly 4 Dash\" notebook we learned to add Plotly figures to Dash Apps<br>\n",
         "\n",
-        "In this notebook we will add interactivity to Dash Apps "
+        "In this notebook we will add interactivity to Dash Apps"
       ],
       "metadata": {
         "id": "spLYc_Ghz7Oy"
@@ -52,7 +52,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install jupyter-dash"
+        "!pip install dash"
       ],
       "metadata": {
         "id": "1jssVCpxyVQT"
@@ -64,7 +64,7 @@
       "cell_type": "code",
       "source": [
         "import plotly.express as px\n",
-        "from jupyter_dash import JupyterDash\n",
+        "from dash import Dash\n",
         "from dash.dependencies import Input, Output\n",
         "from dash import html\n",
         "from dash import dcc"
@@ -109,7 +109,7 @@
       "cell_type": "code",
       "source": [
         "# Build App\n",
-        "app = JupyterDash(__name__)\n",
+        "app = Dash(__name__)\n",
         "app.layout = html.Div([\n",
         "    html.H1(\"JupyterDash Demo\"),\n",
         "    dcc.Graph(id='graph'),\n",
