--- a/Dash_1.ipynb
+++ b/Dash_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOHQBkG0AXd51AWXWr9ygfm",
+      "authorship_tag": "ABX9TyMoPLT4vwHNauG0pxL6HzDo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -111,7 +111,7 @@
         "# Build App\n",
         "app = Dash(__name__)\n",
         "app.layout = html.Div([\n",
-        "    html.H1(\"JupyterDash Demo\"),\n",
+        "    html.H1(\"Dash Demo\"),\n",
         "    dcc.Graph(id='graph'),\n",
         "    html.Label([\n",
         "        \"colorscale\",\n",
