--- a/Plotly_4_Dash.ipynb
+++ b/Plotly_4_Dash.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyN5urB8LrJ3+TVmthWs91Je",
+      "authorship_tag": "ABX9TyN+OXynOfZgPMpME6TNor1S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -179,25 +179,25 @@
         "\"range\": [150, 225, 300],\n",
         "\"performance\": [220,270],\n",
         "\"point\": [250]},\n",
-        "\t\n",
+        "\n",
         "{\"label\": \"Profit\",\n",
         "\"sublabel\": \"%\",\n",
         "\"range\": [20, 25, 30],\n",
         "\"performance\": [21, 23],\n",
         "\"point\": [26]},\n",
-        "\t\n",
+        "\n",
         "{\"label\": \"Order Size\",\n",
         "\"sublabel\":\"US$, average\",\n",
         "\"range\": [350, 500, 600],\n",
         "\"performance\": [100,320],\n",
         "\"point\": [550]},\n",
-        "\t\n",
+        "\n",
         "{\"label\": \"New Customers\",\n",
         "\"sublabel\": \"count\",\n",
         "\"range\": [1400, 2000, 2500],\n",
         "\"performance\": [1000, 1650],\n",
         "\"point\": [2100]},\n",
-        "\t\n",
+        "\n",
         "{\"label\": \"Satisfaction\",\n",
         "\"sublabel\": \"out of 5\",\n",
         "\"range\": [3.5, 4.25, 5],\n",
@@ -241,8 +241,8 @@
     {
       "cell_type": "code",
       "source": [
-        "app.run_server(mode='external')\n",
-        "#app.run_server(mode=\"inline\")"
+        "#app.run_server(mode='external')\n",
+        "app.run_server(mode=\"inline\")"
       ],
       "metadata": {
         "id": "EIzHFEbHwM8Y"
