--- a/Plotly_4_Dash.ipynb
+++ b/Plotly_4_Dash.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyN+OXynOfZgPMpME6TNor1S",
+      "authorship_tag": "ABX9TyPgSMzxLZOGIz5ts2Ynekq2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,10 +59,48 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install jupyter-dash"
+        "!pip install dash"
       ],
       "metadata": {
         "id": "_ytlXVabuqfO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import dash\n",
+        "import dash_core_components as dcc\n",
+        "import dash_html_components as html\n",
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "iSFa-iv0zqsN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app = dash.Dash(__name__)"
+      ],
+      "metadata": {
+        "id": "6JSXQ0oU3WjS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app.layout = html.Div([\n",
+        "    dcc.Graph(figure=fig)\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "896W9BwA4Dn8"
       },
       "execution_count": null,
       "outputs": []
@@ -81,7 +119,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from jupyter_dash import JupyterDash\n",
         "from dash.dependencies import Input, Output\n",
         "from dash import html\n",
         "from dash import dcc\n",
@@ -119,31 +156,11 @@
     {
       "cell_type": "code",
       "source": [
-        "#Create the app and put the figure in it\n",
-        "app = JupyterDash(__name__)\n",
-        "app.layout = html.Div([\n",
-        "    dcc.Graph(figure=fig)\n",
-        "])"
+        "if __name__ == '__main__':\n",
+        "    app.run_server(mode='inline', port=8050, debug=False)"
       ],
       "metadata": {
-        "id": "5kD3XmSLvKJO"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#app.run_server(debug=True, use_reloader=False)  # Turn off reloader if inside Jupyter\n",
-        "\n",
-        "# Run app and display result inline in the notebook\n",
-        "app.run_server(mode='inline')\n",
-        "\n",
-        "#Uncomment to run externally from the notebook\n",
-        "#app.run_server(mode='external')"
-      ],
-      "metadata": {
-        "id": "6AIwXLnVvNbI"
+        "id": "H2z0LdeJ3QQ3"
       },
       "execution_count": null,
       "outputs": []
@@ -275,7 +292,43 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import dash\n",
+        "import dash_core_components as dcc\n",
+        "import dash_html_components as html\n",
+        "import numpy as np\n",
+        "\n",
+        "app = dash.Dash(__name__)\n",
+        "\n",
+        "app.layout = html.Div(children=[\n",
+        "    html.H1(children='Random Scatter Plot'),\n",
+        "\n",
+        "    dcc.Graph(\n",
+        "        id='scatter-plot',\n",
+        "        figure={\n",
+        "            'data': [\n",
+        "                {\n",
+        "                    'x': np.random.rand(100),\n",
+        "                    'y': np.random.rand(100),\n",
+        "                    'mode': 'markers',\n",
+        "                    'marker': {\n",
+        "                        'size': 10,\n",
+        "                        'color': 'rgb(0, 128, 0)',\n",
+        "                        'opacity': 0.7\n",
+        "                    },\n",
+        "                    'type': 'scatter'\n",
+        "                }\n",
+        "            ],\n",
+        "            'layout': {\n",
+        "                'title': 'Random Scatter Plot'\n",
+        "            }\n",
+        "        }\n",
+        "    )\n",
+        "])\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    app.run_server(mode='inline', port=8050, debug=False)"
+      ],
       "metadata": {
         "id": "8sdAfrjSxgWe"
       },
