--- a/Plotly_4_Dash.ipynb
+++ b/Plotly_4_Dash.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPgSMzxLZOGIz5ts2Ynekq2",
+      "authorship_tag": "ABX9TyMhbPEk5zvkwe8XHxIhCu+j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -232,7 +232,7 @@
         "\ttitle='A simple bullet chart'\n",
         ")\n",
         "\n",
-        "#fig.show()"
+        "fig.show()"
       ],
       "metadata": {
         "id": "ULQ4t5VFnQbP"
@@ -244,7 +244,7 @@
       "cell_type": "code",
       "source": [
         "#Create the app and add the figure\n",
-        "app = JupyterDash(__name__)\n",
+        "app = dash.Dash(__name__)\n",
         "app.layout = html.Div([\n",
         "    dcc.Graph(figure=fig)\n",
         "])"
@@ -259,7 +259,8 @@
       "cell_type": "code",
       "source": [
         "#app.run_server(mode='external')\n",
-        "app.run_server(mode=\"inline\")"
+        "if __name__ == '__main__':\n",
+        "    app.run_server(mode='inline', port=8050, debug=False)\n"
       ],
       "metadata": {
         "id": "EIzHFEbHwM8Y"
