--- a/Plotly_4_Dash.ipynb
+++ b/Plotly_4_Dash.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMhbPEk5zvkwe8XHxIhCu+j",
+      "authorship_tag": "ABX9TyOOaeQvFAQbNc1+01oAEYoP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,9 +119,9 @@
     {
       "cell_type": "code",
       "source": [
-        "from dash.dependencies import Input, Output\n",
         "from dash import html\n",
         "from dash import dcc\n",
+        "import numpy as np\n",
         "import plotly.graph_objects as go # or plotly.express as px"
       ],
       "metadata": {
@@ -150,7 +150,8 @@
         "#Create the figure\n",
         "fig = go.Figure() # or any Plotly Express function e.g. px.bar(...)\n",
         "# fig.add_trace( ... )\n",
-        "# fig.update_layout( ... )"
+        "# fig.update_layout( ... )\n",
+        "fig.show()"
       ]
     },
     {
