--- a/Plotly_4_Dash.ipynb
+++ b/Plotly_4_Dash.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOOaeQvFAQbNc1+01oAEYoP",
+      "authorship_tag": "ABX9TyMUYXZKWesFJ63TNvvVlZos",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,23 +84,10 @@
     {
       "cell_type": "code",
       "source": [
-        "app = dash.Dash(__name__)"
+        "app1 = dash.Dash(__name__)"
       ],
       "metadata": {
         "id": "6JSXQ0oU3WjS"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "app.layout = html.Div([\n",
-        "    dcc.Graph(figure=fig)\n",
-        "])"
-      ],
-      "metadata": {
-        "id": "896W9BwA4Dn8"
       },
       "execution_count": null,
       "outputs": []
@@ -157,8 +144,21 @@
     {
       "cell_type": "code",
       "source": [
+        "app1.layout = html.Div([\n",
+        "    dcc.Graph(figure=fig)\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "896W9BwA4Dn8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "if __name__ == '__main__':\n",
-        "    app.run_server(mode='inline', port=8050, debug=False)"
+        "    app1.run_server(mode='inline', port=8050, debug=False)"
       ],
       "metadata": {
         "id": "H2z0LdeJ3QQ3"
