--- a/Plotly_4_Dash.ipynb
+++ b/Plotly_4_Dash.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMUYXZKWesFJ63TNvvVlZos",
+      "authorship_tag": "ABX9TyNm+fjXo354AmbQVzfs/QfE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,7 +158,8 @@
       "cell_type": "code",
       "source": [
         "if __name__ == '__main__':\n",
-        "    app1.run_server(mode='inline', port=8050, debug=False)"
+        "    #app1.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app1.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "H2z0LdeJ3QQ3"
@@ -245,8 +246,8 @@
       "cell_type": "code",
       "source": [
         "#Create the app and add the figure\n",
-        "app = dash.Dash(__name__)\n",
-        "app.layout = html.Div([\n",
+        "app2 = dash.Dash(__name__)\n",
+        "app2.layout = html.Div([\n",
         "    dcc.Graph(figure=fig)\n",
         "])"
       ],
@@ -259,9 +260,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#app.run_server(mode='external')\n",
         "if __name__ == '__main__':\n",
-        "    app.run_server(mode='inline', port=8050, debug=False)\n"
+        "    #app2.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app2.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "EIzHFEbHwM8Y"
@@ -300,9 +301,9 @@
         "import dash_html_components as html\n",
         "import numpy as np\n",
         "\n",
-        "app = dash.Dash(__name__)\n",
+        "app3 = dash.Dash(__name__)\n",
         "\n",
-        "app.layout = html.Div(children=[\n",
+        "app3.layout = html.Div(children=[\n",
         "    html.H1(children='Random Scatter Plot'),\n",
         "\n",
         "    dcc.Graph(\n",
@@ -329,7 +330,8 @@
         "])\n",
         "\n",
         "if __name__ == '__main__':\n",
-        "    app.run_server(mode='inline', port=8050, debug=False)"
+        "    #app3.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app3.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "8sdAfrjSxgWe"
