--- a/Dash_2.ipynb
+++ b/Dash_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNTGIMSu6LDFuYQkxfrjR61",
+      "authorship_tag": "ABX9TyMU1JBlaZgOE4Hw5QXUgcGu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install jupyter-dash"
+        "!pip install dash"
       ],
       "metadata": {
         "id": "1jssVCpxyVQT"
@@ -42,7 +42,8 @@
       "cell_type": "code",
       "source": [
         "import plotly.express as px\n",
-        "from jupyter_dash import JupyterDash\n",
+        "import dash\n",
+        "import numpy as np\n",
         "from dash.dependencies import Input, Output\n",
         "from dash import html\n",
         "from dash import dcc"
@@ -69,7 +70,7 @@
       "cell_type": "code",
       "source": [
         "# Build App\n",
-        "app = JupyterDash(__name__)\n",
+        "app = dash.Dash(__name__)\n",
         "app.layout = html.Div(children=[\n",
         "    html.H1(children='Hello Dash'),\n",
         "\n",
@@ -145,7 +146,9 @@
       "cell_type": "code",
       "source": [
         "# Run app and display result inline in the notebook\n",
-        "app.run_server(mode='inline')"
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "1FOVRcvE2Qf6"
