--- a/Dash_1.ipynb
+++ b/Dash_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMoPLT4vwHNauG0pxL6HzDo",
+      "authorship_tag": "ABX9TyOorLZTgwLqMRxV3/f1OiT6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -178,7 +178,9 @@
       "cell_type": "code",
       "source": [
         "# Run app and display result inline in the notebook\n",
-        "app.run_server(mode='inline')"
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "1FOVRcvE2Qf6"
