--- a/Dash_3.ipynb
+++ b/Dash_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMq+NrQAE0UGUidH4E0smBe",
+      "authorship_tag": "ABX9TyMkV1OE2/n4Xn2xWm04o2DN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install jupyter-dash"
+        "!pip install dash"
       ],
       "metadata": {
         "id": "1jssVCpxyVQT"
@@ -50,8 +50,8 @@
     {
       "cell_type": "code",
       "source": [
+        "import dash\n",
         "import plotly.express as px\n",
-        "from jupyter_dash import JupyterDash\n",
         "from dash.dependencies import Input, Output\n",
         "from dash import html\n",
         "from dash import dcc"
@@ -65,7 +65,7 @@
     {
       "cell_type": "code",
       "source": [
-        "app = JupyterDash(__name__)\n",
+        "app = dash.Dash(__name__)\n",
         "\n",
         "app.layout = html.Div(children=[\n",
         "    html.H1(children='Are you a cat person?'),\n",
@@ -84,13 +84,23 @@
         "    if input_value == 'Heisenberg':\n",
         "        return ['You are a cat person.']\n",
         "    else:\n",
-        "        return ['You are a dog person.']\n",
-        "\n",
-        "if __name__ == '__main__':\n",
-        "    app.run_server(host='127.0.0.1', port=8888, debug=True)"
+        "        return ['You are a dog person.']"
       ],
       "metadata": {
         "id": "PcgvfxDmSaHX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
+      ],
+      "metadata": {
+        "id": "w9R_vgQdHk1w"
       },
       "execution_count": null,
       "outputs": []
