--- a/Dash_Callbacks.ipynb
+++ b/Dash_Callbacks.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMV3wDULN8QaDoMlll0VvOs",
+      "authorship_tag": "ABX9TyNwJXggme+B6SRp0hIuqqbZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install jupyter-dash"
+        "!pip install dash"
       ],
       "metadata": {
         "id": "1jssVCpxyVQT"
@@ -50,8 +50,8 @@
     {
       "cell_type": "code",
       "source": [
+        "import dash\n",
         "import plotly.express as px\n",
-        "from jupyter_dash import JupyterDash\n",
         "from dash.dependencies import Input, Output\n",
         "from dash import html\n",
         "from dash import dcc"
@@ -85,7 +85,7 @@
       "cell_type": "code",
       "source": [
         "# Build App\n",
-        "app = JupyterDash(__name__)\n",
+        "app = dash.Dash(__name__)\n",
         "app.layout = html.Div([\n",
         "    html.H3(\"Change the value in the text box to see callbacks in action!\"),\n",
         "    html.Div([\n",
@@ -130,7 +130,7 @@
       "source": [
         "Whenever the input value changes, the callback wrapper gets called automatically.\n",
         "<br>\n",
-        "Component_id and component_property are keywords and optional in a callback. We saw this with the \"Plotly 4 Dash\" notebook. We did not have any inputs or outputs in the app, so we did not need the component_id or component_property. "
+        "Component_id and component_property are keywords and optional in a callback. We saw this with the \"Plotly 4 Dash\" notebook. We did not have any inputs or outputs in the app, so we did not need the component_id or component_property."
       ],
       "metadata": {
         "id": "xDZFf2G923nj"
@@ -166,7 +166,9 @@
       "cell_type": "code",
       "source": [
         "# Run app and display result inline in the notebook\n",
-        "app.run_server(mode='external')"
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "1FOVRcvE2Qf6"
@@ -179,7 +181,7 @@
       "source": [
         "**Assignment 1**<br>\n",
         "Add another callback to the page.<br>\n",
-        "Pay attention to the HTML syntax, \n"
+        "Pay attention to the HTML syntax,\n"
       ],
       "metadata": {
         "id": "PTfogYSBXCZr"
@@ -208,7 +210,7 @@
     {
       "cell_type": "code",
       "source": [
-        "app = JupyterDash(__name__)\n",
+        "app = dash.Dash(__name__)\n",
         "\n",
         "df = pd.read_csv('https://plotly.github.io/datasets/country_indicators.csv')\n",
         "\n",
@@ -301,8 +303,8 @@
       "cell_type": "code",
       "source": [
         "if __name__ == '__main__':\n",
-        "    app.run_server(debug=True)\n",
-        "    #app.run_server(mode='inline')"
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "s4tzvxFM4hOJ"
@@ -315,7 +317,7 @@
       "source": [
         "**Assignment 2**<br>\n",
         "Modify the app<br>\n",
-        "Look at the dataset (https://plotly.github.io/datasets/country_indicators.csv) and modify the app. \n",
+        "Look at the dataset (https://plotly.github.io/datasets/country_indicators.csv) and modify the app.\n",
         "<br>Or<br>\n",
         "You can go to the datasets page https://plotly.github.io/datasets/\n",
         "and find another data set to display"
@@ -336,11 +338,11 @@
     {
       "cell_type": "code",
       "source": [
-        "#If you want to use an external style sheet this is where you would \n",
+        "#If you want to use an external style sheet this is where you would\n",
         "#put it\n",
         "external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
         "\n",
-        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "app = dash.Dash(__name__, external_stylesheets=external_stylesheets)\n",
         "\n",
         "app.layout = html.Div([\n",
         "    dcc.Input(\n",
@@ -387,8 +389,8 @@
       "cell_type": "code",
       "source": [
         "if __name__ == '__main__':\n",
-        "    app.run_server(debug=True)\n",
-        "    #app.run_server(mode='inline')"
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "OJxDfEE0556j"
@@ -434,7 +436,7 @@
       "source": [
         "#external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
         "\n",
-        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "app = dash.Dash(__name__, external_stylesheets=external_stylesheets)\n",
         "\n",
         "all_options = {\n",
         "    'America': ['New York City', 'San Francisco', 'Cincinnati'],\n",
@@ -509,8 +511,8 @@
       "cell_type": "code",
       "source": [
         "if __name__ == '__main__':\n",
-        "    app.run_server(debug=True)\n",
-        "    #app.run_server(mode='inline')"
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "8A00DGWC7HAM"
@@ -541,7 +543,7 @@
       "source": [
         "external_stylesheets = [\"https://codepen.io/chriddyp/pen/bWLwgP.css\"]\n",
         "\n",
-        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "app = dash.Dash(__name__, external_stylesheets=external_stylesheets)\n",
         "\n",
         "app.layout = html.Div([\n",
         "    dcc.Input(id=\"input-1\", type=\"text\", value=\"Montréal\"),\n",
@@ -575,9 +577,9 @@
     {
       "cell_type": "code",
       "source": [
-        "if __name__ == \"__main__\":\n",
-        "    app.run_server(debug=True)\n",
-        "    #app.run_server(mode='inline')"
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "Ez5kmncf9sN_"
@@ -588,7 +590,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "If we include State, the output will not change until the Submit button is pressed. "
+        "If we include State, the output will not change until the Submit button is pressed."
       ],
       "metadata": {
         "id": "v-Iti-Fl-oef"
@@ -620,7 +622,7 @@
       "source": [
         "external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
         "\n",
-        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
+        "app = dash.Dash(__name__, external_stylesheets=external_stylesheets)\n",
         "\n",
         "app.layout = html.Div([\n",
         "    dcc.Input(id='input-1-state', type='text', value='Montréal'),\n",
@@ -659,8 +661,8 @@
       "cell_type": "code",
       "source": [
         "if __name__ == '__main__':\n",
-        "    app.run_server(debug=True)\n",
-        "    #app.run_server(mode='inline')"
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "DVlvgS0N_P1R"
@@ -680,7 +682,7 @@
     {
       "cell_type": "code",
       "source": [
-        "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)"
+        "app = dash.Dash(__name__, external_stylesheets=external_stylesheets)"
       ],
       "metadata": {
         "id": "kz2l5pnCAlhx"
@@ -726,9 +728,9 @@
     {
       "cell_type": "code",
       "source": [
-        "if __name__ == \"__main__\":\n",
-        "    app.run_server(debug=True)\n",
-        "    #app.run_server(mode='inline')"
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "metadata": {
         "id": "tFCuA8dmAbW4"
@@ -739,7 +741,7 @@
     {
       "cell_type": "code",
       "source": [
-        "app = JupyterDash(__name__)\n",
+        "app = dash.Dash(__name__)\n",
         "\n",
         "my_input = dcc.Input(value='initial value', type='text')\n",
         "my_output = html.Div()\n",
@@ -760,14 +762,23 @@
         "    Input(my_input, component_property='value')\n",
         ")\n",
         "def update_output_div(input_value):\n",
-        "    return f'Output: {input_value}'\n",
-        "\n",
-        "\n",
-        "if __name__ == '__main__':\n",
-        "    app.run_server(debug=True)"
+        "    return f'Output: {input_value}'"
       ],
       "metadata": {
         "id": "TtjyIVGjA8IR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
+      ],
+      "metadata": {
+        "id": "ljWhIKozJwvO"
       },
       "execution_count": null,
       "outputs": []
