--- a/Dash_Summerizer.ipynb
+++ b/Dash_Summerizer.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP8BH7x+k5m2TGdec+5QCYX",
+      "authorship_tag": "ABX9TyOYUqWCT7bkXDEZB+55mJac",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,17 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install dash"
+      ],
+      "metadata": {
+        "id": "gBmdEomuKYwp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!pip install jupyter-dash transformers"
       ],
       "metadata": {
@@ -64,8 +75,8 @@
     {
       "cell_type": "code",
       "source": [
+        "import dash\n",
         "import plotly.express as px\n",
-        "from jupyter_dash import JupyterDash\n",
         "from dash.dependencies import Input, Output\n",
         "from dash import html\n",
         "from dash import dcc\n",
@@ -112,7 +123,7 @@
       "source": [
         "# Define app\n",
         "#app = JupyterDash(__name__, external_stylesheets=[dbc.themes.BOOTSTRAP])\n",
-        "app = JupyterDash(__name__)\n",
+        "app = dash.Dash(__name__)\n",
         "server = app.server\n",
         "\n",
         "controls = dbc.Card(\n",
@@ -128,7 +139,7 @@
         "                ),\n",
         "            ]\n",
         "        ),\n",
-        "      \n",
+        "\n",
         "        dbc.FormGroup(\n",
         "            [\n",
         "                dbc.Label(\"Beam Size\"),\n",
@@ -270,10 +281,26 @@
         "id": "B_6lj6V3pk7I"
       },
       "source": [
-        "app.run_server(mode='external')"
+        "if __name__ == '__main__':\n",
+        "    #app.run_server(mode='inline', port=8050, debug=False)\n",
+        "    app.run_server(jupyter_mode='external', port=8055, debug=False)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Suggestion of text to summarize:\n",
+        "The boy had seemed destined for a life of affluence and earthly pursuits. Born into the family behind a major mining conglomerate in Mongolia, he might have been picked to someday lead the company from its steel-and-glass headquarters in the country’s capital.\n",
+        "\n",
+        "Instead, the 8-year-old is now at the heart of a struggle between the Dalai Lama and the Chinese Communist Party.\n",
+        "\n",
+        "He was just a toddler when everything changed. On a visit to a vast monastery in the capital city of Ulaanbaatar, known for a towering Buddha statue gilded in gold, his father brought him and his twin brother into a room where they and seven other boys were given a secret test."
+      ],
+      "metadata": {
+        "id": "JYEH_xdNLPiO"
+      }
     }
   ]
 }
